# docs/swagger.json
@@ -38,7 +38,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.User"
+                            "$ref": "#/definitions/models.User"
                         }
                     }
                 ],
@@ -89,8 +89,28 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.Question"
+                                "$ref": "#/definitions/models.Question"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/quiz/next": {
+            "get": {
+                "description": "Retrieve the next question for the quiz",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Quiz"
+                ],
+                "summary": "Get the next question",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Question"
                         }
                     }
                 }
@@ -139,6 +159,29 @@
                 }
             }
         },
+        "/quiz/stats": {
+            "get": {
+                "description": "Retrieve user performance statistics",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Stats"
+                ],
+                "summary": "Get user statistics",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/quiz/submit": {
             "post": {
                 "description": "Submit an answer to a question",
@@ -159,7 +202,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.AnswerPayload"
+                            "$ref": "#/definitions/models.AnswerPayload"
                         }
                     }
                 ],
@@ -205,7 +248,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.User"
+                            "$ref": "#/definitions/models.User"
                         }
                     }
                 ],
@@ -242,7 +285,7 @@
         }
     },
     "definitions": {
-        "main.AnswerPayload": {
+        "models.AnswerPayload": {
             "type": "object",
             "properties": {
                 "answer": {
@@ -253,7 +296,7 @@
                 }
             }
         },
-        "main.Question": {
+        "models.Question": {
             "type": "object",
             "properties": {
                 "answer": {
@@ -270,7 +313,7 @@
                 }
             }
         },
-        "main.User": {
+        "models.User": {
             "type": "object",
             "properties": {
                 "password": {
