# internal/models/question.go
@@ -1,0 +1,7 @@
+package models
+
+type Question struct {
+	Question string   `json:"question"`
+	Options  []string `json:"options"`
+	Answer   int      `json:"answer"`
+}
